--- a/style.css
+++ b/style.css
@@ -24,3 +24,15 @@ html {
 .CodeMirror .error {
 	background-color:#600;
 }
+
+/* from rubyblue */
+.CodeMirror-completions {
+	background:#112435;
+	border:4px solid #112435 ;
+}
+.CodeMirror-completions select,
+.CodeMirror-completions option {
+	background:#112435;
+	color:#fff;
+	font: 13px/1.4em Trebuchet, Verdana, sans-serif;
+}
