--- a/style.css
+++ b/style.css
@@ -37,6 +37,6 @@ html {
 	font: 13px/1.4em Trebuchet, Verdana, sans-serif;
 }
 
-.span-fb, .span-plusone {
-	margin-top:8px;
+.span-fb, .span-plusone, .span-twitter {
+	padding:8px;
 }
