--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ html {
 }
 
 .hx-options {
-	height:300px;
+	height:302px;
 }
 .js-output .js-run {
-	height:289px;
+	height:291px;
 }
 
 .js-run {
@@ -27,6 +27,16 @@ html {
 .CodeMirror {
 	line-height:1.2em;
 }
+.CodeMirror {
+	border: 1px solid #DDD;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.075);
+	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.075);
+	box-shadow: 0 1px 1px rgba(0,0,0,0.075);
+}
+
 
 /* from rubyblue */
 .CodeMirror-completions {
@@ -36,8 +46,16 @@ html {
 	*/
 
 	/* cobalt */
-	background:#002240;
-	border:4px solid #002240;
+	/*background:#002240;
+	border:4px solid #002240;*/
+	background:#fff;
+	border:4px solid #fff;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.075);
+	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.075);
+	box-shadow: 0 1px 1px rgba(0,0,0,0.075);
 
 }
 .CodeMirror-completions select,
@@ -49,8 +67,12 @@ html {
 	*/
 	
 	/* cobalt */
-	background:#002240;
+	/*background:#002240;
 	color:#fff;
+	font-family:monospace;*/
+
+	background:#fff;
+	color:#333;
 	font-family:monospace;
 	
 }
