--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
 	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.075);
 	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.075);
 	box-shadow: 0 1px 1px rgba(0,0,0,0.075);
+	z-index:1501;
 
 }
 .CodeMirror-completions select,
@@ -80,7 +81,8 @@ body {
 .span-fb, .span-plusone, .span-twitter {
 	padding:8px;
 }
-.fullscreen .hx-source {
+.fullscreen-source .hx-source,
+.fullscreen-runner .js-run {
 	position:absolute;
 	top:0;
 	left:0;
@@ -92,12 +94,13 @@ body {
 	padding:0;
 	border:0;
 }
-body.fullscreen {
+body.fullscreen-source,
+body.fullscreen-runner {
 	overflow:hidden;
 }
 
-.fullscreen .CodeMirror,
-.fullscreen .CodeMirror-scroll {
+.fullscreen-source .CodeMirror,
+.fullscreen-source .CodeMirror-scroll {
 	height:100%;
 	border:0;
 }
